Fixed laout shift

--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -4,6 +4,7 @@ select {
   appearance: none;
   width: 100%;
   border-radius: 0.5rem;
+  border: 2px solid transparent;
   border: 1px solid var(--stroke-default);
 
   padding: 0.75rem 1rem;
@@ -94,4 +95,3 @@ input {
     display: none;
   }
 }
-
